fixed nav bar issue of overflowing

--- a/style.css
+++ b/style.css
@@ -16,5 +16,6 @@ article {
 
 ul {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
